Fixed jump class in css

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,9 @@
     background-size: 50px 50px;
     position: relative;
     top: 150px;
+}
 
+.jump {
     animation: jump 0.3s linear;
 }
 
